# goit-pyweb-hw-13

./: .env.example  README.md  compose.yml  main.py  pyproject.toml
alembic/: env.py
src/: database.py
src/repository/: users.py
src/routes/: auth.py  contacts.py
src/schemas/: user.py
src/services/: auth.py  email.py  environment.py
src/services/templates/: email.html
templates/: example_email.html
